--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: 'tristana_redis'
     image: redis:3.2-alpine
     volumes:
-      - ./data/redis:/data
+      - ./data/redis:/var/lib/redis
     expose:
       - '6379'
 
