add reservation_for_admin setting

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,19 +3,13 @@ defaults: &defaults
     template_code:
       verify_code: <%= ENV['SETTING_TEMPLATE_CODE_VERIFY_CODE'] %>
       reservation: <%= ENV['SETTING_TEMPLATE_CODE_RESERVATION'] %>
+      reservation_for_admin: <%= ENV['SETTING_TEMPLATE_CODE_RESERVATION_FOR_ADMIN'] %>
     sign_name: <%= ENV['SETTING_SIGN_NAME'] %>
   aliyun:
     access_key_id: <%= ENV['SETTING_ALIYUN_ACCESS_KEY_ID'] %>
     access_key_secret: <%= ENV['SETTING_ALIYUN_ACCESS_KEY_SECRET'] %>
   juhe:
     app_key: <%= ENV['SETTING_JUHE_APP_KEY'] %>
-  oauth2:
-    site: <%= ENV['OAUTH2_SITE'] %>
-    _ns_id: <%= ENV['OAUTH2__NS_ID'] %>
-  omniauth:
-    skylark:
-      key: <%= ENV['OMNIAUTH_SKYLARK_KEY'] %>
-      secret: <%= ENV['OMNIAUTH_SKYLARK_SECRET'] %>
 
 development:
   <<: *defaults
